# kMTFCompressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: AdaptiveEliasGamma.h  Core.cpp  Core.h  MTF.cpp  MTF.h  MTFBlockWorker.h  MTFBuffer.h  MTFHash.cpp  MTFHash.h  MTFHashCompressor.cpp  MTFHashCompressor.h  MTFHashTable.cpp  MTFHashTable.h  MTFHashTableBlock.cpp  MTFHashTableBlock.h  MTFHashTableStream.cpp  MTFHashTableStream.h  MTFRankBuffer.h  Monitor.h  PipelineBuffer.h  RLE.cpp  RLE.h  SPSCQueue.h  Semaphore.h  SequenceCompressor.h  bitstream.cpp  bitstream.h
src/encoders/: AdaptiveArithmetic.cpp  AdaptiveArithmetic.h  AdaptiveEliasGamma.cpp  AdaptiveEliasGamma.h  AdaptiveHuffman.cpp  AdaptiveHuffman.h  FastPForEncoder.h  RunLength.cpp  RunLength.h
src/hash/: Adler32.h  CRC.h  ConcatenatedHash.h  DumbHash.cpp  DumbHash.h  Fnv1a.cpp  Fnv1a.h  Hash.cpp  Hash.h  Identity.cpp  Identity.h  JumpConsistent.h  LinearHash.h  MinimiserHash.cpp  MinimiserHash.h  RabinFingerprint.cpp  RabinFingerprint.h  RabinKarp.h  SimHash.cpp  SimHash.h  TabulationHash.h  VectorHash.cpp  VectorHash.h
src/hash/randomized/: LinearHash.cpp  LinearHash.h  MinimiserHash.cpp  MinimiserHash.h  RabinKarp.cpp  RabinKarp.h  TabulationHash.cpp  TabulationHash.h
src/mtf/: MTF.cpp  MTF.h  MTFHashCompressor.cpp  MTFHashCompressor.h
src/mtf/buffer/: CountBuffer.h  MTFBuffer.cpp  MTFBuffer.h  MTFRankBuffer.cpp  MTFRankBuffer.h
src/mtf/mtftable/: MTFBlockWorker.cpp  MTFBlockWorker.h  MTFHashContext.h  MTFHashTable.cpp  MTFHashTable.h  MTFHashTableBlock.cpp  MTFHashTableBlock.h  MTFHashTableStream.cpp  MTFHashTableStream.h
src/stream/: ibitstream.h  ibufbitstream.h  ifbitstream.h  obitstream.h  obufbitstream.h  ofbitstream.h
src/stream/ibitstream/: ibitstream.cpp  ibitstream.h  ibufbitstream.cpp  ibufbitstream.h  ifbitstream.cpp  ifbitstream.h
src/stream/obitstream/: obitstream.cpp  obitstream.h  obufbitstream.cpp  obufbitstream.h  ofbitstream.cpp  ofbitstream.h
test/: CMakeLists.txt  test_adaptive_huffman.cpp  test_classic_mtf.cpp  test_compress_decompress.cpp  test_compression_ratio.cpp  test_mtf_buffer.cpp  test_mtf_compress_decompress.cpp  test_rle.cpp  test_tabulation_hash.cpp
