project(Tests)


add_executable(test_compression_ratio test_compression_ratio.cpp)
target_link_libraries(test_compression_ratio MTF_lib)
add_test(compression_ratio test_compression_ratio)

add_executable(test_compress_decompress test_compress_decompress.cpp)
target_link_libraries(test_compress_decompress MTF_lib)
add_test(compress_decompress test_compress_decompress)

add_executable(test_mtf_compress_decompress test_mtf_compress_decompress.cpp)
target_link_libraries(test_mtf_compress_decompress MTF_lib)
add_test(mtf_compress_decompress test_mtf_compress_decompress)

add_executable(test_classic_mtf test_classic_mtf.cpp)
target_link_libraries(test_classic_mtf MTF_lib)
add_test(classic_mtf test_classic_mtf)

add_executable(test_mtf_buffer test_mtf_buffer.cpp)
target_link_libraries(test_mtf_buffer MTF_lib)
add_test(mtf_buffer test_mtf_buffer)

add_executable(test_rle test_rle.cpp)
target_link_libraries(test_rle MTF_lib)
add_test(rle test_rle)

add_executable(test_tabulation_hash test_tabulation_hash.cpp)
target_link_libraries(test_tabulation_hash MTF_lib)
add_test(tabulation_hash test_tabulation_hash)
